# Resume-ATS-Analyzer

./: README.md  ai_suggestions.py  analyzer.py  app.py  file_processor.py  models.py  pdf_generator.py  pyproject.toml  replit.md  routes.py
static/css/: custom.css
static/js/: app.js
templates/: base.html  index.html  results.html
